--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "antd": "^5.20.6",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "preact": "^10.24.0",
     "preact-i18next": "^11.8.5",
     "preact-iso": "^2.6.3",
+    "preact-jsx-runtime": "^1.2.0",
     "preact-render-to-string": "^6.5.11",
     "semver": "^7.6.3",
     "sqlite3": "^5.1.7"
@@ -53,7 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.10.0",
+    "eslint": "^8.57.1",
     "eslint-config-preact": "^1.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-formatter-friendly": "^7.0.0",
@@ -71,7 +74,8 @@
     "sass": "^1.79.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
-    "vite": "^5.4.6"
+    "vite": "^5.4.6",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "eslintConfig": {
     "extends": "preact"
