--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "antd": "^5.20.6",
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.21.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "i18next": "^23.15.1",
@@ -74,8 +75,9 @@
     "sass": "^1.79.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
-    "vite": "^5.4.6",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite": "^5.4.8",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "eslintConfig": {
     "extends": "preact"
