--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "noEmit": true,
     "allowJs": true,
     "checkJs": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
 
     /* Preact Config */
     "jsx": "react-jsx",
