--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preact",
     "vite",
     "typescript",
-    "antd",
+    "bootstrap",
     "sqlite3"
   ],
   "scripts": {
@@ -29,8 +29,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "antd": "^5.21.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "i18next": "^23.15.1",
