--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
@@ -55,6 +56,7 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
