--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prepare": "husky",
     "preview": "vite preview",
     "serve": "pnpm build && vite preview",
+    "test": "jest src/__tests__ ",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -34,53 +35,58 @@
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "i18next": "^23.15.2",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.0",
-    "preact": "^10.24.2",
+    "preact": "^10.24.3",
     "preact-i18next": "^11.8.5",
-    "preact-iso": "^2.6.3",
+    "preact-iso": "^2.8.1",
     "preact-jsx-runtime": "^1.2.0",
     "preact-render-to-string": "^6.5.11",
     "semver": "^7.6.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@babel/parser": "^7.25.7",
-    "@babel/types": "^7.25.7",
-    "@eslint/js": "^9.12.0",
+    "@babel/parser": "^7.26.2",
+    "@babel/types": "^7.26.0",
+    "@eslint/js": "^9.15.0",
     "@preact/preset-vite": "^2.9.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/preact": "^3.2.4",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.6",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.15.0",
     "eslint-config-preact": "^1.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-compat": "^6.0.1",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "git-format-staged": "^3.1.1",
-    "globals": "^15.10.0",
+    "globals": "^15.12.0",
     "gz-cz": "^1.0.4",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-preact": "^4.1.1",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "sass": "^1.79.4",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0",
-    "vite": "^5.4.8",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "sass": "^1.81.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^5.4.11",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.3"
   },
   "eslintConfig": {
     "extends": "preact"
