feat: added lightbox and increased batchsize for imagecard and imagegrid

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "bs5-lightbox": "^1.8.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "i18next": "^23.16.8",
